--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
                 <li><a href="#"><span class="material-icons">build</span>Services</a></li>
             </ul>
 
+            <div class="chat-history">
+                <div class="history-label">Previous 7 Days</div>
+                <div class="history-list">
+                    <a href="#" class="history-item">
+                        <span class="material-icons">chat_bubble_outline</span>
+                        <span class="history-text">New Chat</span>
+                    </a>
+                    <a href="#" class="history-item">
+                        <span class="material-icons">chat_bubble_outline</span>
+                        <span class="history-text">New Chat</span>
+                    </a>
+                </div>
+            </div>
+
             <div class="user-profile">
                 <button>
                     <img src="https://lh3.googleusercontent.com/a/ACg8ocIE9x0eF6o5wOjpaj33ZwhnQd0u9ZEzMI-0tlBmG8dVq3HfwXY=s96-c" alt="Gaurav Sah" class="avatar">
@@ -80,7 +94,6 @@
             </div>
 
             <div class="products-grid">
-                <!-- Product Card Template -->
                 <div class="product-card">
                     <div class="product-image">
                         <img src="https://placehold.co/200x200/2A2A2A/ECECF1?text=Roundup" alt="Roundup Herbicide">
@@ -97,7 +110,91 @@
                         </div>
                     </div>
                 </div>
-                <!-- Repeat product-card for other products -->
+
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="https://placehold.co/200x200/2A2A2A/ECECF1?text=Coragen" alt="Coragen Insecticide">
+                    </div>
+                    <div class="product-info">
+                        <div class="rating">
+                            <span class="material-icons">star</span>
+                            <span>4.9</span>
+                        </div>
+                        <h3>Coragen Insecticide</h3>
+                        <div class="price-stock">
+                            <span class="price">₹2,199</span>
+                            <span class="stock">In Stock</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="https://placehold.co/200x200/2A2A2A/ECECF1?text=Saaf" alt="Saaf Fungicide">
+                    </div>
+                    <div class="product-info">
+                        <div class="rating">
+                            <span class="material-icons">star</span>
+                            <span>4.7</span>
+                        </div>
+                        <h3>Saaf Fungicide</h3>
+                        <div class="price-stock">
+                            <span class="price">₹240</span>
+                            <span class="stock">In Stock</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="https://placehold.co/200x200/2A2A2A/ECECF1?text=Nativo" alt="Nativo Fungicide">
+                    </div>
+                    <div class="product-info">
+                        <div class="rating">
+                            <span class="material-icons">star</span>
+                            <span>4.8</span>
+                        </div>
+                        <h3>Nativo Fungicide</h3>
+                        <div class="price-stock">
+                            <span class="price">₹380</span>
+                            <span class="stock">In Stock</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="https://placehold.co/200x200/2A2A2A/ECECF1?text=Bavistin" alt="Bavistin Fungicide">
+                    </div>
+                    <div class="product-info">
+                        <div class="rating">
+                            <span class="material-icons">star</span>
+                            <span>4.6</span>
+                        </div>
+                        <h3>Bavistin Fungicide</h3>
+                        <div class="price-stock">
+                            <span class="price">₹320</span>
+                            <span class="stock">In Stock</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="https://placehold.co/200x200/2A2A2A/ECECF1?text=Fantac" alt="Fantac Plus Growth Promoter">
+                    </div>
+                    <div class="product-info">
+                        <div class="rating">
+                            <span class="material-icons">star</span>
+                            <span>4.9</span>
+                        </div>
+                        <h3>Fantac Plus Growth Promoter</h3>
+                        <div class="price-stock">
+                            <span class="price">₹599</span>
+                            <span class="stock">In Stock</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </aside>
     </div>
