--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Cropsay</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0">
 </head>
 <body>
     <svg style="display: none;">
@@ -69,10 +70,13 @@
                             <span class="material-icons">add</span>
                         </button>
                         <button class="circular-button">
-                            <span class="material-icons">search</span>
+                            <span class="material-symbols-outlined">shopping_bag</span>
                         </button>
                         <button class="circular-button">
                             <span class="material-icons">psychology</span>
+                        </button>
+                        <button class="audio-button">
+                            <span class="material-symbols-outlined">graphic_eq</span>
                         </button>
                         <button class="send-button">
                             <span class="material-icons">arrow_upward</span>
